[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Ivan Dmitrievsky <dmitrievsky@cindicator.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.44.0"
uvicorn = "^0.10.8"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
